# notebooklm-openai

./: .env.mlx  .env.openai  .gitignore  README.md  pyproject.toml
podcast/: clean.py  llm.py
podcast/prompts/: clean.txt
src/notebooklm/: audio.py  clean_text.py  notebook_lm.py  rewrite.py  transcript.py  utils.py
src/notebooklm/models/: audio_model.py  models.py  text_models.py
src/notebooklm/prompts/: rewrite.txt  transcript.txt
